--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -48,3 +48,13 @@ h1, h2, h3, h4, h5, h6 {
 .nav a:hover {
     color: #fff !important;
 }
+
+/* ====== LANDING ======
+   ===================== */
+
+#landing {
+    background-image: url(../img/neon-sign.jpg);
+    background-position: 50% 50%;
+    background-size: cover;
+    height: 842px;
+}
