--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -22,12 +22,19 @@ h1, h2, h3, h4, h5, h6 {
     border: none;
 }
 
+.navbar-brand {
+    height: 100px;
+    margin: 0;
+    padding: 0;
+    width: 100px;
+}
+
 .navbar-brand img[alt] {
-    width: 20%;
+    width: 100%;
 }
 
 .nav {
-    margin-top: 25px;
+    margin-top: 75px;
     background-color: #eaa925;
 }
 
