--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -40,7 +40,7 @@ h1, h2, h3, h4, h5, h6 {
 .nav a {
     text-transform: uppercase;
     font-family: "Arimo", "Helvetica", sans-serif;
-    color:  #525e08 !important;
+    color:  #fff !important;
     padding: 5px !important;
     padding-left: 10px !important;
     opacity: 0.9;
@@ -57,26 +57,31 @@ h1, h2, h3, h4, h5, h6 {
 /* ====== LANDING ======
    ===================== */
 
-.bg {
-    position: absolute;
-    z-index: -1;
-    height: 100%;
-    width: auto;
+#landing {
+    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/bread-821503_1920.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 100vh;
 }
 
 #landing h1 {
-    margin-top: 270px;
-    margin-left: 60%;
-    width: 100px;
+    margin-top: 400px;
     font-size: 100px;
-    color: rgba(255, 255, 255, 0.8);
+    color: rgba(255, 255, 255, 0.9);
+}
+
+#landing p {
+    font-size: 30px;
+    color: #a1ae54;
+    letter-spacing: 0.485em;
 }
 
 #landing button {
-    
+    color: #fff;
     background-color: rgba(82, 94, 8, 0.9);
     border: 1px solid rgba(82, 94, 8, 0.9);
-    margin-left: 64%;
     padding: 10px 30px;
     text-transform: uppercase;
     letter-spacing: 0.5em;
