--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -1,6 +1,10 @@
 /* ====== ALL CONTENT CODE ======
    ============================== */
 
+html, body {
+    height: 100%;
+}
+
 body {
     font-family: "Arimo", "Helvetica", sans-serif;
     font-size: 14px;
@@ -63,7 +67,7 @@ h1, h2, h3, h4, h5, h6 {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    height: 100vh;
+    height: 100%;
 }
 
 #landing h1 {
