--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -80,6 +80,7 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 30px;
     color: #a1ae54;
     letter-spacing: 0.485em;
+    margin-top: 30px;
 }
 
 #landing button {
@@ -89,6 +90,19 @@ h1, h2, h3, h4, h5, h6 {
     padding: 10px 30px;
     text-transform: uppercase;
     letter-spacing: 0.5em;
-    margin-top: 20px;
+    margin-top: 60px;
+}
+
+/* ------ PHONE ------ */
+
+@media (max-width: 768px) {
+    
+    #landing h1 {
+        font-size: 20px;
+    }
+    
+    #landing p {
+        font-size: 14px;
+    }
 }
 
