--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -97,8 +97,13 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 768px) {
     
+    .navbar-brand {
+    height: 80px;
+    width: 80px;
+}
+    
     #landing h1 {
-        margin-top: 300px;
+        margin-top: 250px;
         font-size: 30px;
     }
     
