--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -79,8 +79,10 @@ h1, h2, h3, h4, h5, h6 {
 #landing p {
     font-size: 30px;
     color: #a1ae54;
-    letter-spacing: 0.485em;
+    letter-spacing: 0.41em;
     margin-top: 30px;
+    font-weight: 800;
+    opacity: 0.9;
 }
 
 #landing button {
@@ -93,23 +95,4 @@ h1, h2, h3, h4, h5, h6 {
     margin-top: 60px;
 }
 
-/* ------ PHONE ------ */
-
-@media (max-width: 768px) {
-    
-    .navbar-brand {
-    height: 80px;
-    width: 80px;
-}
-    
-    #landing h1 {
-        margin-top: 250px;
-        font-size: 30px;
-    }
-    
-    #landing p {
-        font-size: 14px;
-        letter-spacing: 0.15em;
-    }
-}
 
