--- a/css/xs-styles.css
+++ b/css/xs-styles.css
@@ -1,7 +1,12 @@
 @media (max-width: 768px) {
     
+    #about, #menu, #events, #visit {
+    margin-top: 5px;
+}
+    
     .navbar {
     top: 0;
+    height: 80px;
 }
     
     .navbar-collapse {
@@ -13,6 +18,10 @@
     height: 80px;
     width: 80px;
 }
+    
+    .filler {
+        height: 80px;
+    }
     
     #landing h1 {
         margin-top: 250px;
