Info Section Delete
- deleted info section and replaced it by a social section with only
Facebook and instagram icons

--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -72,26 +72,14 @@ h1, h2, h3, h4, h5, h6 {
     color: #fff !important;
 }
 
-/* ====== INFO ======
+/* ====== SOCIAL ======
    ================== */
 
-#info {
+#social {
     left: 240px;
     position: absolute;
-    color: #fff;
-    opacity: 0.8;
     padding-top: 10px;
     padding-bottom: 0;
-}
-
-#info p, #info ul, #info i {
-    display: inline-block;
-    margin-bottom: 0;
-}
-
-#info p, .fa-circle {
-    letter-spacing: 0.51em;
-    margin-right: 15px;
 }
 
 .fa {
@@ -153,6 +141,12 @@ h1, h2, h3, h4, h5, h6 {
 
 #menu {
     background: rgba(161, 174, 84, 0.7);
+    height: 82.4%;
+}
+
+.menu {
+    margin-top: 100px;
+    padding: 0;
 }
 
 
