--- a/css/xs-styles.css
+++ b/css/xs-styles.css
@@ -22,6 +22,10 @@
     .filler {
         height: 100px;
     }
+
+    #landing {
+        background-attachment: inherit;
+    }
     
     #landing h1 {
         margin-top: 250px;
