--- a/css/xs-styles.css
+++ b/css/xs-styles.css
@@ -1,8 +1,21 @@
 @media (max-width: 768px) {
     
+    /* ====== ALL PAGE CODE ======
+       =========================== */
+    
     #about, #menu, #events, #visit {
     margin-top: 5px;
 }
+    
+      /* ====== FILLER ======
+       ==================== */
+    
+    .filler {
+        height: 100px;
+    }
+    
+    /* ====== NAVBAR ======
+       ==================== */
     
     .navbar {
     top: 0;
@@ -19,9 +32,8 @@
     width: 100px;
 }
     
-    .filler {
-        height: 100px;
-    }
+    /* ====== LANDING ======
+       ===================== */
 
     #landing {
         background-attachment: inherit;
@@ -37,9 +49,19 @@
         letter-spacing: 0.085em;
     }
     
+    #landing button {
+        margin-top: 40px;
+    }
+    
+    /* ====== OWNERS ======
+       ==================== */
+    
     #owners {
         margin-bottom: 40px;
     }
+    
+    /* ====== MENU ======
+       ================== */
     
     #menu {
         padding-top: 0;
@@ -50,4 +72,11 @@
     font-size: 1em;
     text-align: justify;
 }
+}
+
+@media (max-width: 768px) {
+    
+      #landing h1 {
+        margin-top: 150px;
+      }
 }
