trial sm media query on iPad

--- a/css/sm-styles.css
+++ b/css/sm-styles.css
@@ -1,8 +1,12 @@
-@media (min-width: 768px) and (max-width: 991px) and {
+@media (min-width: 768px) and (max-width: 991px) {
     
      #navbar .container {
         margin-right: 0 !important;
         margin-left: 0 !important;
+    }
+    
+    #social {
+    left: 0;
     }
     
       #landing h1 {
