--- a/css/sm-styles.css
+++ b/css/sm-styles.css
@@ -1,7 +1,16 @@
 @media (min-width: 768px) and (max-width: 991px) {
     
+    #navbar container {
+        margin-left: 0;
+        margin-right: 0;
+    }
+    
     #social {
     left: 0;
+    }
+    
+    #landing {
+        background-attachment: inherit;
     }
     
       #landing h1 {
@@ -10,5 +19,10 @@
     
     #landing p {
         letter-spacing: 0.14em;
+    }
+    
+    #selection {
+     font-size: 1em;
+    letter-spacing: 0.09em;
     }
 }
