--- a/css/sm-styles.css
+++ b/css/sm-styles.css
@@ -1,8 +1,8 @@
 @media (min-width: 768px) and (max-width: 1024px) {
     
     #navbar container {
-        margin-left: 0;
-        margin-right: 0;
+        margin-left: 0 !important;
+        margin-right: 0 !important;
     }
     
     #social {
