--- a/css/sm-styles.css
+++ b/css/sm-styles.css
@@ -1,13 +1,22 @@
 @media (min-width: 768px) and (max-width: 1024px) {
     
+    /* ====== NAVBAR ======
+       ==================== */
+    
     #navbar container {
         margin-left: 0 !important;
         margin-right: 0 !important;
     }
     
+    /* ====== SOCIAL ======
+       ==================== */
+    
     #social {
     left: 0;
     }
+    
+    /* ====== LANDING =======
+       ====================== */
     
     #landing {
         background-attachment: inherit;
@@ -21,8 +30,19 @@
         letter-spacing: 0.14em;
     }
     
+    /* ====== SELECTION ======
+       ======================= */
+    
     #selection {
      font-size: 1em;
     letter-spacing: 0.09em;
+    }
+    
+    /* ====== EVENTS ======
+       ==================== */
+    
+    #monday, #tuesday {
+        width: 100%;
+        margin: 20px 0;
     }
 }
