--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -176,18 +176,15 @@ h1, h2, h3, h4, h5, h6 {
    ==================== */
 
 #events {
-    height: 80%;
     padding: 0;
-    margin-bottom: 20px;
 }
 
 #events article {
     margin-top: 0;
-    padding-top: 15px;
     padding-bottom: 15px;
 }
 
-#monday, #tuesday {
+#monday, #tuesday, #wed-sat {
     background: rgba(234, 169, 37, 0.5);
     padding: 10px;
     margin-top: 20px;
@@ -203,10 +200,16 @@ h1, h2, h3, h4, h5, h6 {
     width: 272.5px;
 }
 
+
 #events article h4 {
     font-family: "Arimo", "Helvetica", sans-serif;
     text-transform: uppercase;
-    text-decoration: underline    
+    text-decoration: underline;    
+}
+
+#wed-sat a {
+    color: #707e1f;
+    font-style: italic;
 }
 
 
