--- a/css/sm-styles.css
+++ b/css/sm-styles.css
@@ -41,8 +41,8 @@
     /* ====== EVENTS ======
        ==================== */
     
-    #monday, #tuesday {
+    #monday, #tuesday, #wed-sat {
         width: 100%;
-        margin: 20px 0;
+        margin: 20px 0 0 0;
     }
 }
