--- a/css/xs-styles.css
+++ b/css/xs-styles.css
@@ -76,8 +76,8 @@
     /* ====== EVENTS ======
        ==================== */
     
-    #monday, #tuesday {
+    #monday, #tuesday, #wed-sat {
         width: 100%;
-        margin: 10px 0;
+        margin: 10px 0 0 0;
     }
 }
