--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -214,4 +214,12 @@ h1, h2, h3, h4, h5, h6 {
     font-style: italic;
 }
 
+/* ====== CONTACTS AND LOCATIONS ======
+   ==================================== */
+
+#visit {
+    background-image: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8) ), url(../img/map-455769.jpg);
+    height: 50%;
+}
+
 
