--- a/css/sm-styles.css
+++ b/css/sm-styles.css
@@ -8,6 +8,10 @@
         margin-right: 0 !important;
     }
     
+        .nav a:hover {
+    border-bottom: none !important;
+}
+    
     /* ====== SOCIAL ======
        ==================== */
     
