--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -261,6 +261,10 @@ h1, h2, h3, h4, h5, h6 {
     padding: 50px 0;
 }
 
+#visit span {
+    color: #fff;
+}
+
 #deli h4, #cafe h4 {
     margin-top: 40px;
     color: rgba(161, 174, 84, 0.75);
