--- a/css/xs-styles.css
+++ b/css/xs-styles.css
@@ -83,4 +83,15 @@
         width: 100%;
         margin: 10px 0 0 0;
     }
+    
+    /* ====== VISIT ======
+       =================== */
+    
+    #visit {
+    padding: 0;
+}
+
+#deli h1, #cafe h1 {
+    margin-top: 40px;
+}
 }
