--- a/css/xs-styles.css
+++ b/css/xs-styles.css
@@ -88,10 +88,16 @@
        =================== */
     
     #visit {
-    padding: 0;
+    padding: 0 0 20px 20px;
+    
 }
 
 #deli h1, #cafe h1 {
     margin-top: 40px;
 }
+    .hours p:first-child {
+    margin-top: 10px;
+        margin-bottom: 0;
+}
+
 }
