--- a/css/xs-styles.css
+++ b/css/xs-styles.css
@@ -1,7 +1,5 @@
-@media (max-width: 767px) {
-    
-    /* ====== ALL PAGE CODE ======
-       =========================== */
+/* ====== ALL PAGE CODE ======
+   =========================== */
     
     #about, #menu, #events, #visit {
     margin-top: 5px;
@@ -76,6 +74,17 @@
     text-align: justify;
 }
     
+    .hide-me {
+    visibility: visible;
+}
+
+#reuben, #salad, #local, #coffee {
+    width: 70%;
+    height: 165px;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+    
     /* ====== EVENTS ======
        ==================== */
     
@@ -92,12 +101,37 @@
     
 }
 
-#deli h1, #cafe h1 {
+    #deli h1, #cafe h1 {
     margin-top: 40px;
+        font-size: 20px;
 }
+    
+    #deli h4, #cafe h4 {
+        font-size: 12px;
+        margin-bottom: 0;
+    }
+    
+    #deli p, #cafe p {
+        font-size: 12px;
+    }
+    
     .hours p:first-child {
     margin-top: 10px;
         margin-bottom: 0;
 }
-
+    
+    .map {
+    height: 200px;
+    margin-top: 20px;
 }
+    
+    #connect .fa-div {
+    width: 40px;
+}
+
+#connect .fa {
+    color: #525e08;
+    margin-bottom: 10px;
+    margin-left: 60px;
+}
+
