--- a/css/xs-styles.css
+++ b/css/xs-styles.css
@@ -10,7 +10,7 @@
 
 
 /* ====== FILLER ======
-       ==================== */
+   ==================== */
 
 .filler {
     height: 100px;
@@ -18,7 +18,7 @@
 
 
 /* ====== NAVBAR ======
-       ==================== */
+   ==================== */
 
 .navbar {
     top: 0;
@@ -43,9 +43,13 @@
     border-bottom: none !important;
 }
 
+.icon-bar {
+    background-color: #a1ae54 !important;
+}
+
 
 /* ====== LANDING ======
-       ===================== */
+   ===================== */
 
 #landing {
     background-attachment: inherit;
@@ -64,7 +68,7 @@
 
 
 /* ====== OWNERS ======
-       ==================== */
+   ==================== */
 
 #owners {
     margin-bottom: 40px;
@@ -72,7 +76,7 @@
 
 
 /* ====== MENU ======
-       ================== */
+   ================== */
 
 #menu {
     padding-top: 0;
@@ -100,7 +104,7 @@
 
 
 /* ====== EVENTS ======
-       ==================== */
+   ==================== */
 
 #monday,
 #tuesday,
@@ -111,7 +115,7 @@
 
 
 /* ====== VISIT ======
-       =================== */
+   =================== */
 
 #deli h1,
 #cafe h1 {
