--- a/css/xs-styles.css
+++ b/css/xs-styles.css
@@ -113,6 +113,19 @@
     margin: 10px 0 0 0;
 }
 
+/* ====== CONNECT ======
+   ===================== */
+
+#connect .fa-div {
+    width: auto;
+}
+
+#connect .fa {
+    color: #525e08;
+    margin-bottom: 10px;
+    margin-left: 15px;
+    display: inline;
+}
 
 /* ====== VISIT ======
    =================== */
@@ -144,13 +157,3 @@
     margin-top: 20px;
 }
 
-#connect .fa-div {
-    width: auto;
-}
-
-#connect .fa {
-    color: #525e08;
-    margin-bottom: 10px;
-    margin-left: 15px;
-    display: inline;
-}
